# ChangeLog for sci-physics/root
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/root/ChangeLog,v 1.45 2009/04/13 11:32:58 bicatali Exp $

  13 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org>
  root-5.20.00-r3.ebuild, -root-5.22.00.ebuild, root-5.22.00-r1.ebuild:
  Applied a patch from Ben Bannier to fix cint7 without ROOTSYS (bug
  #263332) and allow cross-compiling (thanks jer, bug #265482)

*root-5.22.00-r1 (06 Apr 2009)

  06 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org>
  root-5.20.00-r3.ebuild, +root-5.22.00-r1.ebuild:
  Fixed hicolor icons, thanks ulm, added new upstream patch and fixed doc
  name for TMVA, thanks Ben Bannier

  22 Mar 2009; Jeremy Olexa <darkside@gentoo.org> root-5.20.00-r3.ebuild:
  amd64 stable, bug 245875

  05 Mar 2009; Ferris McCormick <fmccor@gentoo.org> root-5.20.00-r3.ebuild:
  Sparc stable and done with Bug #245875.

  20 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> files/proofd.initd,
  files/rootd.initd, files/xrootd.initd, root-5.20.00-r3.ebuild,
  root-5.22.00.ebuild:
  Fixed postgresql configuration (bug #251590), fixed server rootd and
  proofd files

  19 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org> root-5.22.00.ebuild:
  Fixed ftgl dependency, closing bug #251634

*root-5.22.00 (19 Dec 2008)

  19 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org> +root-5.22.00.ebuild:
  Version bump, moved to EAPI=2

  19 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org>
  root-5.20.00-r3.ebuild:
  Forgot to apply xrootd-prop-flags patch

*root-5.20.00-r3 (18 Dec 2008)

  18 Dec 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/root-5.20.00-as-needed.patch, -files/root-5.20.00-configure.patch,
  +files/root-5.20.00-configure-paths.patch, -files/root-5.20.00-pic.patch,
  +files/root-5.20.00-prop-flags.patch,
  +files/root-5.20.00-xrootd-shared.patch, +files/olbd.confd,