@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX olbd.confd 197 RMD160 798de1808502f3e4ecfc5f024b56a419d9824057 SHA1 f2a4385fdf9849eafb1d5457727f6fbe80af1da3 SHA256 5a34da76bbe56cd3b8128f05c0d9900f9d7f7ffdcffc5deeb816c78ea46679ba
 AUX olbd.initd 714 RMD160 e2cc28474a280345f6962f890f5ddb3884d7f69f SHA1 4dcdf7ba35a834db2ac5a5bdfe4d2c31938f0552 SHA256 5d6c1b6e7b40d6842df6a6f7314fa2f49329b820ff86592d2f8d2662a414ec39
 AUX proofd.confd 415 RMD160 3814aacb63d82b9d060086f9bef304d431a15b4e SHA1 31eb7af239a0042f887b5089a7c6c7ec5d6662e9 SHA256 261738817b4ba50fb07007741305d0a88e9067a45e3cbfd1d3fc8bebe70ece38
@@ -26,7 +29,14 @@ DIST root_v5.20.00.source.tar.gz 25349138 RMD160 daa702dd8729d125f57a4ac3bf35ea1
 DIST root_v5.22.00.source.tar.gz 26320334 RMD160 0fba2518802ce1f737b8cededbf518f0e475ba19 SHA1 b63e09d90ffef973fd487fdc7fc1ed3b26cf6d48 SHA256 9445351905e2b1b546bd6fea9d7397054aa1622a91bbc388014f3706b0843fe2
 EBUILD root-3.05.04.ebuild 1654 RMD160 7f96255fd29b2fc2f2d30e41aa1e41ac57d24622 SHA1 ca10f01367a50aa1c867a4e48e435f4eb24e5151 SHA256 d74fbfd44a1da70c297196b56885128ca47297c9c349f8a083050ff346058dce
 EBUILD root-5.16.00.ebuild 5013 RMD160 596fa91d5aeb62aa1dff05c28506d7c5f5a3fca5 SHA1 6bd6d49c4a94c3ed66a2d080ec34dd7d0910b0a7 SHA256 7257fd10017f5ba8dbe55c61c17e6aa6fc341beafc981216dd09bebd3d55b147
-EBUILD root-5.20.00-r3.ebuild 8912 RMD160 7c26b7bf402595f2971f3d6c06bce802c0a1bbf7 SHA1 4c5261dc712d514f05c3f90dca4fbce427886f92 SHA256 0d5fb8fab920220ff901f5fc282d2e22796c56158abbbf21c118fe73e8eb4d48
-EBUILD root-5.22.00-r1.ebuild 9154 RMD160 970ca1e99667e7e9a8c9fb9d6ffa32daa5713530 SHA1 6eb10ff06de6cc84f682cac9484aded077b2a0ed SHA256 0bc46824942cd189db6a8c32101753b8df73ce5088d782e02555c21bc4d49b7f
-MISC ChangeLog 15275 RMD160 f0653394b07edd5b1fb177683c2fffd97cd56e8f SHA1 af7e13e67c21e816ef4c34dcbaf6c9ff984790c6 SHA256 96480a95d1ee021a4f8b74c8d9dfce71f854dff69612a77de947066b1ca392b7
+EBUILD root-5.20.00-r3.ebuild 8930 RMD160 b9e7d6a46b6354a1cf371efe891b5a858fec0510 SHA1 3717d75e8c2d2662645e2365971147157d1463f4 SHA256 2624911eaa0b0bed0c9c3ceb778ff6cbd7a690d521f262066790735a65ec2974
+EBUILD root-5.22.00-r1.ebuild 9172 RMD160 c38209ecc126b4301f645e8c85f60c0f1934528b SHA1 32e2fab2078852ff71b30292cc6132fd462fccce SHA256 fbdc8fd7c8321a46e83ad5bec859f98bc3ab98eda68d55c6855839ce19ccc745
+MISC ChangeLog 15416 RMD160 b08c2e4b2df58aaae94bfabd5dbce3d9b0519aab SHA1 9aff8a0fdd89dd4048a0e606ad4b121a0e3ef70c SHA256 0d41a5a2eba1248ab5b53c07b4f2f8c131a75e1bde7e2e8374e241e5f43366f2
 MISC metadata.xml 1569 RMD160 dba331cab0e10890d441d667416e43098a764c3f SHA1 38d5cc13c7531ac1ba267f447b2ac84cb9c2e6c4 SHA256 884bc118e850e655cdf52e3f7e8171d8a88d2c6c986fd5d5e49cbd303c18aaa2
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkoAUM4ACgkQNQqtfCuFneOJXQCfcAJprBULOjzBy1bL6VKmQQcD
+Y7QAnjeTBEPWjCmHOCEE+4P53vnMNxX9
+=Ce5o
+-----END PGP SIGNATURE-----
