@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/root/Attic/root-5.22.00-r1.ebuild,v 1.2 2009/04/13 11:32:58 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/root/Attic/root-5.22.00-r1.ebuild,v 1.3 2009/05/05 14:44:15 fauli Exp $
 
 EAPI=2
 inherit versionator eutils qt4 fortran elisp-common fdo-mime toolchain-funcs
@@ -63,7 +63,8 @@ CDEPEND=">=dev-lang/cfortran-4.4-r2
 				  x11-libs/qt-qt3support:4
 				  x11-libs/qt-xmlpatterns:4 )
 			x11-libs/qt:4[qt3support,opengl] ) )
-	ruby? ( dev-lang/ruby )
+	ruby? ( dev-lang/ruby
+			dev-ruby/rubygems )
 	ssl? ( dev-libs/openssl )
 	xml? ( dev-libs/libxml2 )"
 
