@@ -1,6 +1,10 @@
 # ChangeLog for sci-physics/root
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/root/ChangeLog,v 1.45 2009/04/13 11:32:58 bicatali Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sci-physics/cvs-repo/gentoo-x86/sci-physics/root/ChangeLog,v 1.46 2009/05/05 14:44:15 fauli Exp $
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org>
+  root-5.20.00-r3.ebuild, root-5.22.00-r1.ebuild:
+  add dev-ruby/rubygems as dependency
 
   13 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org>
   root-5.20.00-r3.ebuild, -root-5.22.00.ebuild, root-5.22.00-r1.ebuild:
